src/test/ui/issue-36400.nll.stderr
error[E0596]: cannot borrow immutable item `*x` as mutable
  --> $DIR/issue-36400.rs:15:7
   |
LL |     f(&mut *x); //~ ERROR cannot borrow immutable
   |       ^^^^^^^ cannot borrow as mutable
   |
   = note: Value not mutable causing this error: `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
